@@ -2,7 +2,6 @@ package com.social.user.controllers;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -23,7 +22,6 @@ import com.social.domain.Profile;
 import com.social.presentation.CommonResponse;
 import com.social.presentation.ProfileDTO;
 import com.social.service.IUserService;
-import com.social.service.ProfileException;
 
 import lombok.RequiredArgsConstructor;
 
@@ -41,20 +39,24 @@ public class UserController
 	{
 		List<Profile> users = userService.allUsers();
 		CommonResponse<List<ProfileDTO>> dto = new CommonResponse<>();
-		dto.setData(users.stream().map(ProfileMapper::convertDTO).collect(Collectors.toList()));
+		dto.setData(users.stream().map(ProfileMapper::convertDTO).toList());
 		dto.setStatus(HttpStatus.OK);
 		return dto;
 	}
 
 	@PreAuthorize("hasAuthority('ROLE_USER1')")
 	@GetMapping(value = "/{id}")
-	public CommonResponse<ProfileDTO> getUserById(@PathVariable(required = true, name = "id") Long id)
+	public ResponseEntity<CommonResponse<ProfileDTO>> getUserById(@PathVariable(required = true, name = "id") Long id)
 	{
 		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
 		Optional<Profile> profile = userService.getUserbyUserNameAndId(authentication.getName(), id);
-		CommonResponse<ProfileDTO> dto = new CommonResponse<>();
-		dto.setData(ProfileMapper.convertDTO(profile.get()));
-		return dto;
+		if (profile.isPresent())
+		{
+			CommonResponse<ProfileDTO> dto = new CommonResponse<>();
+			dto.setData(ProfileMapper.convertDTO(profile.get()));
+			return new ResponseEntity<>(dto, HttpStatus.OK);
+		}
+		return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
 	}
 
 	@GetMapping(value = "/count")
@@ -67,20 +69,26 @@ public class UserController
 	public ResponseEntity<CommonResponse<ProfileDTO>> updateUser(@PathVariable Long id, @RequestBody @Validated ProfileDTO user)
 	{
 		Optional<Profile> newUser = userService.updateUser(ProfileMapper.convert(user));
-		CommonResponse<ProfileDTO> dto = new CommonResponse<>();
-		dto.setData(ProfileMapper.convertDTO(newUser.get()));
-
-		return new ResponseEntity<>(dto, HttpStatus.OK);
+		if (newUser.isPresent())
+		{
+			CommonResponse<ProfileDTO> dto = new CommonResponse<>();
+			dto.setData(ProfileMapper.convertDTO(newUser.get()));
+			return new ResponseEntity<>(dto, HttpStatus.OK);
+		}
+		return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
 	}
 
 	@PostMapping(value = "/", consumes = "application/json", produces = "application/json")
-	public ResponseEntity<CommonResponse<ProfileDTO>> createUser(@RequestBody @Validated ProfileDTO user) throws ProfileException
+	public ResponseEntity<CommonResponse<ProfileDTO>> createUser(@RequestBody @Validated ProfileDTO user) throws Exception
 	{
 		Optional<Profile> newUser = userService.saveUser(ProfileMapper.convert(user));
-		CommonResponse<ProfileDTO> dto = new CommonResponse<>();
-		dto.setData(ProfileMapper.convertDTO(newUser.get()));
-
-		return new ResponseEntity<>(dto, HttpStatus.OK);
+		if (newUser.isPresent())
+		{
+			CommonResponse<ProfileDTO> dto = new CommonResponse<>();
+			dto.setData(ProfileMapper.convertDTO(newUser.get()));
+			return new ResponseEntity<>(dto, HttpStatus.OK);
+		}
+		return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
 	}
 
 	@DeleteMapping(value = "/{id}")
